- fixed handling values in `QueryBuilder`
- extended command-line tool by adding new command `total4 --extract <filename.bundle>`
- improved CMS compiler by adding support for inline navigation and breadcrumb
- added `CONF.logger` that enables the writing of `console` into the `/logs/debug.log` file
- fixed `encryption` in actions

========================
0.0.88
========================

- added `API.file(filename, path, [formkey])`
- added `PATH.plugins(path)` method
- added a new event `ON('componentator', function(meta))`
- fixed `FileStorage.readbase64()`
- fixed a file validation for encrypted word/excel files
- updated Tangular template engine
- added a new global keyword `PLUGINS`
- added `U.groupify(id, [count])` method for grouping identifiers
- fixed data validation for the schema actions
- added `DatabaseBuilder.array(name, [comparer], value)` by [Gera](https://github.com/Gera-IC)
- added FlowStream events:
	- `flowstream.on('connect', function(instance))`
	- `flowstream.on('disconnect', function(instance))`
	- `flowstream.on('configure', function(instance))`

========================
0.0.87
========================

- added `charset=utf-8` to the JSON content-type in the `REQUEST()` method
- added `default_tapi` config key
- updated Total.js API endpoint
- added a timeout for Total API endpoints
- fixed timeout for API routes
- improved "requests timeout" mechanism
- allow importing node built-in modules #55 by https://github.com/jornverhoeven
- improved uploading files in the `REQUEST()` method
- added `<readme>` tag to HTML compression blacklist

========================
0.0.86
========================

- fixed returning binary data in the `TotalAPI()` method
- fixed logging in the `FILESTORAGE().rename()` method
- improved parsing of multiple URL query argument keys (joined into the string separated by a comma)
- fixed handling arguments in the `RESTBuilder.API()` method
- fixed `$.url` in the `AUTH()` method

========================
0.0.85