@@ -2316,6 +2316,7 @@ function Framework() {
 		allow_sessions_unused: '-20 minutes',
 		allow_reqlimit: 0,
 		allow_persistent_images: true,
+		allow_check_upload: true,
 
 		textdb_worker: false,
 		textdb_inmemory: 0, // in MB
